# advent-of-code-2024

./: pyproject.toml  run.py
advent/: __init__.py
advent/day_1/: puzzle_1.py  puzzle_2.py
advent/day_2/: puzzle_1.py  puzzle_2.py
advent/day_3/: puzzle_1.py  puzzle_2.py
advent/day_4/: puzzle_1.py  puzzle_2.py
advent/day_5/: puzzle_1.py
advent/day_6/: puzzle_1.py
